[package]
name = "game-night"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.74"
email_address = "0.2.4"
lettre = { version = "0.11.0", default-features = false, features = ["builder", "file-transport", "serde"] }
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
json = { package = "serde_json", version = "1.0.105" }
sqlx = { version = "0.7", features = ["time"] }
constcat = "0.4.0"
url = "2.4"
itertools = "0.12.0"
time = { version = "0.3.28", features = ["formatting", "serde", "local-offset", "macros"] }
time-tz = "2.0.0"
pulldown-cmark = "0.9.3"
dyn-clone = "1.0.14"
ics = "0.5.8"
lazy_static = "1.4.0"
pem = { package = "pem-rfc7468", version = "0.7.0", features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
systemd = "0.10.0"
outbox = { git = "https://github.com/bash/outbox.git", branch = "dbus", version = "0.1.0" }

[features]
tls = ["rocket/tls"]
serve-static-files = []
development = ["tls", "serve-static-files"]
