[package]
name = "game-night"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.74"
email_address = { version = "0.2.4", default-features = false }
lettre = { version = "0.11.0", default-features = false, features = ["builder", "file-transport", "serde"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rocket = { version = "0.6.0-dev", features = ["secrets", "json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["time"] }
constcat = "0.5.0"
url = "2.4"
itertools = "0.13.0"
time = { version = "0.3.28", features = ["formatting", "serde", "local-offset", "macros"] }
time-tz = "2.0.0"
pulldown-cmark = "0.11.0"
dyn-clone = "1.0.14"
ics = "0.5.8"
pem = { package = "pem-rfc7468", version = "0.7.0", features = ["std"] }
listenfd = "1.0.1"
tera-macros = { path = "crates/tera-macros" }
either = "1.12.0"

[target.'cfg(target_os = "linux")'.dependencies]
systemd = "0.10.0"

[target.'cfg(unix)'.dependencies]
outbox = { git = "https://github.com/bash/outbox.git", version = "0.1.0" }

[features]
tls = ["rocket/tls"]
serve-static-files = []
development = ["tls", "serve-static-files"]

[patch.crates-io]
rocket = { git = "https://github.com/rwf2/Rocket/" }
rocket_codegen = { git = "https://github.com/rwf2/Rocket/" }
rocket_http = { git = "https://github.com/rwf2/Rocket/" }
rocket_db_pools = { git = "https://github.com/rwf2/Rocket/" }
rocket_db_pools_codegen = { git = "https://github.com/rwf2/Rocket/" }
rocket_dyn_templates = { git = "https://github.com/rwf2/Rocket/" }

[workspace]
members = ["crates/tera-macros"]
