[package]
name = "sms-outbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
http-auth-basic = "0.3.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
surf = "2.3.2"
zbus = "3.14.1"
