[package]
name = "sms-outbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
